[gd_scene load_steps=46 format=3 uid="uid://dif8veydc7swa"]

[ext_resource type="Script" uid="uid://c3h2p1fcof2ck" path="res://Enemies/scripts/enemy.gd" id="1_mjogr"]
[ext_resource type="PackedScene" uid="uid://bjhxrchsefc6y" path="res://General/HitBox/hit_box.tscn" id="2_v4qv1"]
[ext_resource type="PackedScene" uid="uid://byqdtln48owhi" path="res://General/HurtBox/hurt_box.tscn" id="3_5yg8o"]
[ext_resource type="Texture2D" uid="uid://d35kja0tygab1" path="res://Enemies/1_Domain/tri_slime/sprites/1_slime_idle.png" id="4_uc3ul"]
[ext_resource type="Script" uid="uid://cpv4d58jo2icm" path="res://Enemies/scripts/enemy_state_machine.gd" id="5_gige0"]
[ext_resource type="Script" uid="uid://bguqk2gm4qur6" path="res://Enemies/scripts/states/enemy_state_idle.gd" id="6_0j8ht"]
[ext_resource type="Script" uid="uid://dfqnf2sqncr5a" path="res://Enemies/scripts/states/enemy_state_wander.gd" id="7_a2v52"]
[ext_resource type="Script" uid="uid://bw278fx64iccq" path="res://Enemies/scripts/states/enemy_state_stun.gd" id="8_h2661"]
[ext_resource type="Script" uid="uid://dt7ujt587w1rd" path="res://Enemies/scripts/states/enemy_state_destroy.gd" id="9_bv7dn"]
[ext_resource type="Script" uid="uid://clsyxmpxpf325" path="res://Enemies/1_Domain/tri_bow/enemy_state_chase_weapon.gd" id="10_v4qv1"]
[ext_resource type="Script" uid="uid://ngy6jptf2j03" path="res://Enemies/scripts/states/enemy_state_attack.gd" id="11_ea2df"]
[ext_resource type="Texture2D" uid="uid://24m5q0bmhokx" path="res://Enemies/General Sprites/DestroySmoke.png" id="12_twjt0"]
[ext_resource type="PackedScene" uid="uid://bj5rltgg0qv11" path="res://Enemies/scenes/vision_area.tscn" id="13_1rsc5"]
[ext_resource type="Texture2D" uid="uid://c6fy6hbe2a1r3" path="res://Enemies/1_Domain/tri_slime/sprites/1_slime_down.png" id="14_d8hlu"]
[ext_resource type="Texture2D" uid="uid://mbocdo4knt71" path="res://Enemies/1_Domain/tri_slime/sprites/1_slime_left.png" id="15_urulw"]
[ext_resource type="Texture2D" uid="uid://do1ke6ebb2l6w" path="res://Enemies/1_Domain/tri_slime/sprites/1_slime_right.png" id="16_nkl5a"]
[ext_resource type="Texture2D" uid="uid://d0uqobg3gsr02" path="res://Enemies/1_Domain/tri_slime/sprites/1_slime_up.png" id="17_gpad0"]
[ext_resource type="Texture2D" uid="uid://b0hq8ahc5jnlo" path="res://Enemies/1_Domain/tri_slime/sprites/1_slime_stun_2.png" id="18_2kgkq"]
[ext_resource type="Script" uid="uid://5q4wemb10ae2" path="res://Player/scripts/front_weapon_position.gd" id="19_ovqj1"]
[ext_resource type="Script" uid="uid://d13122uc4jj7d" path="res://Enemies/scripts/enemy_bow_weapon.gd" id="20_v4qv1"]
[ext_resource type="Texture2D" uid="uid://bh8eodclq3npv" path="res://Inventory/Weapons/weapons/bow.png" id="21_5yg8o"]
[ext_resource type="Texture2D" uid="uid://d1vb5gy62xh1a" path="res://Inventory/Weapons/weapons/arrows.png" id="22_uc3ul"]

[sub_resource type="CircleShape2D" id="CircleShape2D_quokb"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0xx41"]
radius = 59.3956

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quokb"]
size = Vector2(100, 100)

[sub_resource type="Animation" id="Animation_0xx41"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_teq83"]
resource_name = "destroy"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0wuc"]
_data = {
&"RESET": SubResource("Animation_0xx41"),
&"destroy": SubResource("Animation_teq83")
}

[sub_resource type="Animation" id="Animation_iuvti"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_uc3ul")]
}

[sub_resource type="Animation" id="Animation_smg1s"]
resource_name = "chase_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_d8hlu")]
}

[sub_resource type="Animation" id="Animation_gtcpl"]
resource_name = "chase_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_urulw")]
}

[sub_resource type="Animation" id="Animation_xyflq"]
resource_name = "chase_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("16_nkl5a")]
}

[sub_resource type="Animation" id="Animation_ciu56"]
resource_name = "chase_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_gpad0")]
}

[sub_resource type="Animation" id="Animation_kqhdh"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_d8hlu")]
}

[sub_resource type="Animation" id="Animation_3rnpg"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_uc3ul")]
}

[sub_resource type="Animation" id="Animation_x2xq5"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15_urulw")]
}

[sub_resource type="Animation" id="Animation_kqywf"]
resource_name = "right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("16_nkl5a")]
}

[sub_resource type="Animation" id="Animation_6qeof"]
resource_name = "stun"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("18_2kgkq")]
}

[sub_resource type="Animation" id="Animation_t0wuc"]
resource_name = "up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_gpad0")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x2xq5"]
_data = {
&"RESET": SubResource("Animation_iuvti"),
&"chase_down": SubResource("Animation_smg1s"),
&"chase_left": SubResource("Animation_gtcpl"),
&"chase_right": SubResource("Animation_xyflq"),
&"chase_up": SubResource("Animation_ciu56"),
&"down": SubResource("Animation_kqhdh"),
&"idle": SubResource("Animation_3rnpg"),
&"left": SubResource("Animation_x2xq5"),
&"right": SubResource("Animation_kqywf"),
&"stun": SubResource("Animation_6qeof"),
&"up": SubResource("Animation_t0wuc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_4jf8m"]
atlas = ExtResource("22_uc3ul")
region = Rect2(0, 0, 768, 1024)

[sub_resource type="Animation" id="Animation_4jf8m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArrowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 4)]
}

[sub_resource type="Animation" id="Animation_pdg1r"]
resource_name = "idle"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_6rynp"]
resource_name = "shoot"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 20, 16, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArrowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(7, 4), Vector2(6, 4), Vector2(4, 4), Vector2(2, 4), Vector2(0, 4), Vector2(-3, 4), Vector2(-6, 4), Vector2(-7, 4), Vector2(-10, 4), Vector2(-12, 4), Vector2(-13, 4), Vector2(-15, 4), Vector2(-10, 4), Vector2(7, 4), Vector2(10, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dbyo"]
_data = {
&"RESET": SubResource("Animation_4jf8m"),
&"idle": SubResource("Animation_pdg1r"),
&"shoot": SubResource("Animation_6rynp")
}

[node name="TriBow" type="CharacterBody2D" node_paths=PackedStringArray("weapon")]
collision_layer = 256
collision_mask = 272
script = ExtResource("1_mjogr")
hp = 4
raycast_length = 400.0
enemy_range = 400.0
weapon = NodePath("WeaponPosition/BowWeapon")

[node name="HitBox" parent="." instance=ExtResource("2_v4qv1")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
scale = Vector2(0.64, 0.64)
shape = SubResource("CircleShape2D_quokb")
debug_color = Color(0.997101, 0, 0.173241, 0.42)

[node name="HurtBox" parent="." instance=ExtResource("3_5yg8o")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2(0.64, 0.64)
shape = SubResource("CircleShape2D_quokb")
debug_color = Color(0.817399, 0.4054, 0, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.64, 0.64)
texture = ExtResource("4_uc3ul")

[node name="AttackHurtBox" parent="Sprite2D" instance=ExtResource("3_5yg8o")]
monitoring = false
knockback_force = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackHurtBox"]
shape = SubResource("CircleShape2D_0xx41")
debug_color = Color(0.961891, 0, 0.507744, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
scale = Vector2(0.64, 0.64)
shape = SubResource("RectangleShape2D_quokb")

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("5_gige0")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("6_0j8ht")
next_state = NodePath("../Wander")

[node name="Wander" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("7_a2v52")
wander_speed = 40.0
next_state = NodePath("../Idle")

[node name="Stun" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("8_h2661")
next_state = NodePath("../Chase")

[node name="Destroy" type="Node" parent="EnemyStateMachine"]
script = ExtResource("9_bv7dn")

[node name="Chase" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("attack", "vision_area", "next_state")]
script = ExtResource("10_v4qv1")
attack = NodePath("../Attack")
chase_speed = 100.0
vision_area = NodePath("../../VisionArea")
next_state = NodePath("../Wander")

[node name="Attack" type="Node" parent="EnemyStateMachine"]
script = ExtResource("11_ea2df")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="DestroyEffectSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(9.53674e-07, 0.499994)
scale = Vector2(3, 2.97)
texture = ExtResource("12_twjt0")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="DestroyEffectSprite"]
libraries = {
&"": SubResource("AnimationLibrary_t0wuc")
}

[node name="VisionArea" parent="." instance=ExtResource("13_1rsc5")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionArea"]
polygon = PackedVector2Array(16, 0, -16, 0, -384, -384, 384, -384)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x2xq5")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -256)
collision_mask = 20

[node name="WeaponPosition" type="Node2D" parent="."]
position = Vector2(0, -40)
rotation = -1.5708
script = ExtResource("19_ovqj1")
weapon_position_y = 40
metadata/_custom_type_script = "uid://5q4wemb10ae2"

[node name="BowWeapon" type="Node2D" parent="WeaponPosition" node_paths=PackedStringArray("enemy")]
script = ExtResource("20_v4qv1")
knockback_force = 100.0
enemy = NodePath("../..")
weapon_name = "Bow"
damage = 2
ep_cost = 1.0

[node name="BowSprite" type="Sprite2D" parent="WeaponPosition/BowWeapon"]
texture = ExtResource("21_5yg8o")
hframes = 6
vframes = 4
frame = 12

[node name="ArrowSprite" type="Sprite2D" parent="WeaponPosition/BowWeapon"]
position = Vector2(7, 4)
scale = Vector2(0.08, 0.08)
texture = SubResource("AtlasTexture_4jf8m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="WeaponPosition/BowWeapon"]
libraries = {
&"": SubResource("AnimationLibrary_0dbyo")
}

[connection signal="enemy_damaged" from="." to="EnemyStateMachine/Stun" method="_on_tri_slime_enemy_damaged"]
[connection signal="animation_finished" from="WeaponPosition/BowWeapon/AnimationPlayer" to="WeaponPosition/BowWeapon" method="_on_animation_player_animation_finished"]
